# CCNY_PhD_2026

./: LICENSE  README.md
Computer Vision/HW1/: Code.m
Computer Vision/HW2/: Hasan Kayman - CSC I6716 Fall 2025 – Assignment 2.m
Computer Vision/HW3/: Hasan Kayman - CSC I6716 Fall 2025 – Assignment 3.m
Computer Vision/HW4/: HW4.ipynb  HW4.py  HW4_Discussion.tex  Hasan Kayman - CSC I6716 Fall 2025 – Assignment 3 GUI.txt  Hasan Kayman - CSC I6716 Fall 2025 – Assignment 3 Logic.txt
Computer Vision/Project/: .~lock.NOTEBOOK_OUTPUT_DESCRIPTIONS.md#  classical_cv_utils.py  requirements.txt  screen_removal.py
Secure Cloud Computing/Ropetyapp-devsec-main/: .gitignore  app.yaml.example  auth_utils.py  (+47 more)
Secure Systems Engineering/aid_adv/glucoguard_Adv/: .gitignore  Cargo.toml  README.md  build.rs
Secure Systems Engineering/aid_adv/glucoguard_Adv/.cargo/: config.toml
Secure Systems Engineering/aid_adv/glucoguard_Adv/data/: database.db
Secure Systems Engineering/aid_adv/glucoguard_Adv/pump_simm/: gcm_reader.csv  gcm_reader.py  insulin_pump.py
Secure Systems Engineering/aid_adv/glucoguard_Adv/src/: access_control.rs  alerts.rs  auth.rs  cgm.rs  diagnostics.rs  input_validation.rs  insulin.rs  logger.rs  main.rs  session.rs  user.rs  utils.rs
Secure Systems Engineering/aid_adv/glucoguard_Adv/src/db/: db_utils.rs  initialize.rs  mod.rs  models.rs  queries.rs  utilis.rs
Secure Systems Engineering/aid_adv/glucoguard_Adv/src/menus/: admin_menu.rs  caretaker_menu.rs  clinician_menu.rs  home_menu.rs  login_menu.rs  menu_utils.rs  mod.rs  patient_menu.rs  signup_menu.rs
(+52 files in other folders)
